tests/snapshots/run_wpt_conformance__coreml_reduceMax_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_max.https.any.js",
    "reduceMax float16 1D tensor default options",
    "coreml",
    "PASS",
)
